--- a/.tmux.conf
+++ b/.tmux.conf
@@ -157,8 +157,14 @@ bind P choose-buffer # choose which buffer to paste from
 
 
 # -- user defined overrides ----------------------------------------------------
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'Morantron/tmux-fingers'
+set -g @plugin 'jbnicolai/tmux-fpp'
 
 if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
+
+run '~/.tmux/plugins/tpm/tpm'
 
 
 # -- 8< ------------------------------------------------------------------------
@@ -1109,3 +1115,4 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 # }
 #
 # "$@"
+#
